# VisEscape-demo

./: .gitignore  README.md  pyproject.toml
assets/room1/: config.py  walkthrough_oracle.json
assets/room10/: config.py  walkthrough_oracle.json
assets/room11/: config.py  walkthrough_oracle.json
assets/room12/: config.py  walkthrough_oracle.json
assets/room13/: config.py  walkthrough_oracle.json
assets/room14/: config.py  walkthrough_oracle.json
assets/room15/: config.py  walkthrough_oracle.json
assets/room16/: config.py  walkthrough_oracle.json
assets/room17/: config.py  walkthrough_oracle.json
assets/room18/: config.py  walkthrough_oracle.json
assets/room19/: config.py  walkthrough_oracle.json
assets/room2/: config.py  walkthrough_oracle.json
assets/room20/: config.py  walkthrough_oracle.json
assets/room3/: config.py  walkthrough_oracle.json
assets/room3/image/: a.py
assets/room4/: config.py  walkthrough_oracle.json
assets/room5/: config.py  walkthrough_oracle.json
assets/room6/: config.py  walkthrough_oracle.json
assets/room7/: config.py  walkthrough_oracle.json
assets/room8/: config.py  walkthrough_oracle.json
assets/room9/: config.py  walkthrough_oracle.json
evaluation/: get_score.py
scripts/: export_room_static.py  make_caption.sh  run_ai.py  run_baseagent.py  run_human.py  run_oracle.py  run_ui.py  run_visescaper.py
scripts/config/: make_caption.sh  make_caption_openai.sh
scripts/server/: vllm.sh
src/vis_escape/: __init__.py  constants.py  utils.py
web/: app.js  index.html  styles.css
web/static_data/: room2.js
(+401 files in other folders)
